platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_7.platter
flag of x = 1 * 1;
start() {}